--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,11 @@
 [build]
-command = "rm -rf .next node_modules/.cache && pnpm run build"
-publish = ".next"
+  command = "npm run build && npm run export"
+  publish = "out"
 
 [build.environment]
-NODE_OPTIONS = "--max-old-space-size=4096"
+  NODE_OPTIONS = "--max-old-space-size=4096"
 
-[template.environment]
-OPENAI_API_KEY = "set your OpenAI API Key"
-ACCESS_CODE = "set your password to protect your api key"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
